<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="192dp"
        android:orientation="vertical"
        android:theme="@style/AppTheme">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="160dp"
            android:layout_height="119dp"
            android:contentDescription="@string/imagen"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/baseline_slow_motion_video_black_48" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:gravity="bottom|start"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/creador"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/asignatura" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>